create function add user name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="choose__content">
-                    <h3 class="title choose__title">You</h3>
+                    <h3 class="title choose__title name">Your name</h3>
                     <div class="choose__img">
                         <img src="image/paper.png" alt="">
                     </div>
@@ -45,7 +45,6 @@
                     <div class="sign__button">Paper</div>
                     <div class="sign__button">Scissors</div>
                 </div>
-
             </div>
         </div>
         <div class="result">
@@ -61,14 +60,13 @@
                         <div class="result__score">0</div>
                     </div>
                     <div class="result__item">
-                        <div class="result__name">You</div>
+                        <div class="result__name name">Your name</div>
                         <div class="result__score">0</div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-
     <script src="main.js"></script>
 </body>
 
