create function add userImage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="choose__content">
                     <h3 class="title choose__title name">Your name</h3>
                     <div class="choose__img">
-                        <img src="image/paper.png" alt="">
+                        <img class="choose__img-user" alt="">
                     </div>
                 </div>
             </div>
