create function choose computer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="choose__content">
                     <h3 class="title choose__title">Computer</h3>
                     <div class="choose__img">
-                        <img src="image/csissors.png" alt="">
+                        <img class="choose__img-computer" alt="">
                     </div>
                 </div>
                 <div class="choose__content-vs">
