add function show result

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                 <div class="result__content">
                     <div class="result__item">
                         <div class="result__name">Computer</div>
-                        <div class="result__score">0</div>
+                        <div class="result__score computer__score">0</div>
                     </div>
                     <div class="result__item">
                         <div class="result__name">Draw</div>
-                        <div class="result__score">0</div>
+                        <div class="result__score draw__score">0</div>
                     </div>
                     <div class="result__item">
                         <div class="result__name name">Your name</div>
-                        <div class="result__score">0</div>
+                        <div class="result__score user__score">0</div>
                     </div>
                 </div>
             </div>
