--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="result">
-            <div class="wrapper">
+            <div class="wrapper result__wrapper">
                 <h3 class="title result__title">Total</h3>
                 <div class="result__content">
                     <div class="result__item">
